# naturL-babel

./: .gitignore  LICENSE  README.md  dune  dune-project  dune-workspace  install.sh  main.ml  naturL.ml  naturL.opam  test  test.ntl
dependencies/: .#keywords.ml  .#structures.ml  dune  errors.ml  errors.mli  expressions.ml  getters.ml  keywords.ml  structures.ml  tokenizer.ml  translation.ml  type_operations.ml  utils.ml
example/: compter.nl  compter.ntl  compter.py  countdown.ntl  dichotomie.ntl  fact.nl  fact.ntl  fact.py  fact_rec.ntl  fibo.nl  fibo.ntl  fibo.py  majeur.nl  majeur.py  ours.ntl  pong.ntl  pong.old_ntl
internationalisation/: dune  translation.json  translation.ml
lsp/: client_notification.ml  dune  environment.ml  example_definition_request.json  full_example.json  functions.ml  header.ml  initialize.json  json.ml  jsonrpc.ml  jsonrpc.mli  listener.ml  reformat.ml  request.ml  result.ml  sender.ml  server.ml  server_notification.ml  structures.ml  types.ml  uri.ml
old_src/: abstract_type_translation.ml  dune  errors.ml  errors.mli  global.ml  tokenizer.ml  translation.ml  warnings.ml
src/: .errors.ml.swp  .translation.ml.swo  .translation.ml.swp  abstract_type_translation.ml  ast.ml  builtins.ml  check_semantic.ml  context.ml  csharp.ml  dune  errors.ml  errors.mli  expressions.ml  getters.ml  getters.ml.orig  global.ml  imports.ml  imports.mli  parser.ml  python.ml  simplify.ml  structures.ml  structures.ml.orig  syntax.ml  tokenizer.ml  translation.ml  translation.ml.orig  type.ml  utils.ml  value.ml  variables.ml  warnings.ml  warnings.mli
(+16 files in other folders)
